force-app/main/default/objects/Voting_Campaign__c/Voting_Campaign__c.object-meta.xml
<CustomObject>
    <label>Voting Campaign</label>
    <nameField>
        <label>Voting Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voting Campaigns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>