force-app/main/default/objects/Voting_Campaign__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <defaultValue>&quot;0-18&quot;</defaultValue>
    <label>Age Range</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age_Range_Set</valueSetName>
    </valueSet>
</CustomField>