force-app/main/default/objects/Voting_Campaign__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>