force-app/main/default/objects/Voting_Campaign__c/fields/VotingLocation__c.field-meta.xml
<CustomField>
    <fullName>VotingLocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>VotingLocation</label>
    <referenceTo>Voting_Location__c</referenceTo>
    <relationshipLabel>Voting Campaigns</relationshipLabel>
    <relationshipName>Voting_Campaigns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>