force-app/main/default/objects/Voting_Campaign__c/listViews/Voting_Campaigns_Details.listView-meta.xml
<ListView>
    <fullName>Voting_Campaigns_Details</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>VotingLocation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Voting Campaigns Details</label>
</ListView>